<resources>
    <string name="app_name">ToTuTu</string>
    <string name="text_info">Info</string>
    <string name="text_set">Set</string>
    <string name="text_set_date">Set Date</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_city_title">City Title</string>
    <string name="text_station_title">Station Title</string>
    <string name="text_country_title">Country Title</string>
    <string name="text_station">Station</string>
    <string name="text_station_id">Station ID</string>
    <string name="text_city">City</string>
    <string name="text_city_id">City ID</string>
    <string name="text_country">Country</string>
    <string name="text_district">District</string>
    <string name="text_region">Region</string>
    <string name="text_longitude_st">Longitude (st)</string>
    <string name="text_latitude_st">Latitude (st)</string>
    <string name="text_longitude_ci">Longitude (ci)</string>
    <string name="text_latitude_ci">Latitude (ci)</string>
    <string name="text_search">Search</string>
    <string name="text_about_app">About App</string>
    <string name="text_version">Version</string>
    <string name="text_copyright">Copyright</string>
</resources>
