<?xml version="1.0" encoding="utf-8"?>

<!-- Для элемента списка ListView, как и для RecyclerView можно создать свой макет.-->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    card_view:cardElevation="10dp"
    card_view:cardBackgroundColor="@color/colorIcons"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/text_country_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_text_country"
                android:textStyle="normal|bold"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:text="@string/text_station_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_text_station"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:text="@string/text_city_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_text_city"
                android:textSize="24sp"
                android:textColor="@color/colorSecondaryText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp">

            <Button
                android:text="@string/text_info"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/item_button_info"
                style="@android:style/Widget.Material.Button.Colored"/>

            <Button
                android:text="@string/text_set"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/item_button_set"
                style="@android:style/Widget.Material.Button.Colored"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>