<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <HorizontalScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_station"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_station_title"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_station_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_station_id"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_city_title"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_city_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_city_id"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_country"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_district"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_district"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_region"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_longitude_st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_longitude_station"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_latitude_st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_latitude_station"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_longitude_ci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_longitude_city"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorIcons"
                    android:gravity="center_vertical"
                    android:elevation="10dp">

                    <TextView
                        android:text="@string/text_latitude_ci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_text_latitude_city"
                        android:layout_column="1"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_margin="10dp"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>
</LinearLayout>